# chroma-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json  CHANGELOG.md  CHROMA_MCP_DEBUG_REPORT.md  CLAUDE.md  Dockerfile  PROJECT_STATUS.md  PowerToys_Paste_20250621163914.txt  README.md  SECURITY.md  TODO.md  TODO_CLEANUP.MD  VALIDATION.md  apply_fixes.py  chroma-mcp-sse.sh  deploy-sse.sh  docker-compose.sse-simple.yaml  docker-compose.sse.yaml  docker-compose.yaml  glama.json  hello.py  inspector-config.json  mcp-menu.sh  pyproject.toml  requirements-filesystem.txt  run-streamable-http.sh  server.py  smithery.yaml  start-sse-host.sh  test-sse.js  test_fork.py  test_sequential.py  test_streamable_http.py
.github/workflows/: test.yml
chroma_data/: chroma.sqlite3  chroma.sqlite3.backup_1747919097  chroma.sqlite3.backup_1747919639
chroma_mcp/: __init__.py  server.py
commands/: docker-volume-mount-verify.md
docker/: filesystem.Dockerfile  http-proxy.Dockerfile  nginx-sse.conf.template  sse-entrypoint.sh  sse-server.Dockerfile  sse-simple-entrypoint.sh  sse-simple.Dockerfile
docker/backups/: docker-compose.fixed  docker-compose.yaml.backup-20250521125011  docker-compose.yaml.bak  docker-compose.yaml.fixed  docker-compose.yaml.new
docs/: CLAUDE_CONTEXT.md  DEPLOYMENT_STATUS.md  FILESYSTEM-INTEGRATION.md  HTTP_PROXY_USAGE.md  TEST_INSTRUCTIONS.md  TOKEN_OPTIMIZATION_GUIDE.md
examples/: chroma_demo.py  direct_chroma_example.py  knowledge_base_demo.py  run_chroma_demo.py  sequential_thinking_example.py
logs/: .bedaeec8505affaa2b6cb44534ca222f1d788b8c-audit.json  .d72c00e9dcc27733f74c283030a390ef5ac33b9d-audit.json  log_processor.py  setup_log_monitoring.py
migration_env/: pyvenv.cfg
scripts/: enhanced_neo4j_migrator.py  json_to_neo4j_migrator.py  rebuild-chroma-mcp.bat  rebuild-filesystem-api.bat  run-mcp.sh  sqlite_recovery.py  verify_persistence.py
specs/: chroma_mcp_technical_overview.md
tests/: neo4j_query_validation_tests.py  novel_testing_framework_comprehensive.py  test_server.py
(+35 files in other folders)
