[project]
name = "chroma-mcp"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.6.3",
    "mcp[cli]>=1.2.1",
]

[project.scripts]
chroma-mcp = "chroma_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
