[project]
name = "chroma-mcp"
version = "0.1.6"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.6.3",
    "mcp[cli]>=1.2.1",
    "python-dotenv>=0.19.0",
]

[project.scripts]
chroma-mcp = "chroma_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["chroma_mcp"]
